<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimplePOS</string>
    <string name="beranda">Home</string>
    <string name="pengaturan">Settings</string>
    <string name="tentang">About</string>
    <string name="simpan">Save</string>
    <string name="batal">Cancel</string>
    <string name="data">Data</string>
    <string name="kodesatuan">Unit code</string>
    <string name="namasatuan">Unit name</string>
    <string name="inputsatuan">Input Unit</string>
    <string name="bahasa">Language</string>
    <string name="openDrawer">Opening Drawer</string>
    <string name="closeDrawer">Closing Drawer</string>
    <string name="cari">Find...</string>
    <string name="inputbarang">Input product</string>
    <string name="kodebarang">Item code/barcode</string>
    <string name="namabarang">Item name</string>
    <string name="kategori">Category</string>
    <string name="satuan">Unit</string>
    <string name="hargabeli">Purchase price</string>
    <string name="hargajual1">Selling price</string>
    <string name="hargajual2">Wholesale price</string>
    <string name="stokminimal">Minimum stock</string>
    <string name="fotobarang">Item pic</string>
    <string name="pilih">Choose</string>
    <string name="pelanggan">Customer</string>
    <string name="sesuai">Stock adjustment</string>
    <string name="barang">Product</string>
    <string name="transaksi">Transaction</string>
    <string name="inputkategori">Input category</string>
    <string name="kodekategori">Category id</string>
    <string name="namakategori">Category name</string>
    <string name="inputpelanggan">Customer Input</string>
    <string name="kodepelanggan">Customer id</string>
    <string name="namapelanggan">Customer name</string>
    <string name="alamat">Address</string>
    <string name="telepon">Phone</string>
    <string name="inputsupplier">Input Supplier</string>
    <string name="kodesupplier">Supplier id</string>
    <string name="namasupplier">Supplier name</string>
    <string name="tanggal">Date</string>
    <string name="stok">Stock</string>
    <string name="jumlah">Quantity</string>
    <string name="alasan">Reason</string>
    <string name="ubah">Update</string>
    <string name="hapus">Delete</string>
    <string name="belumlengkap">Data is incomplete</string>
    <string name="yakin">Are you sure?</string>
    <string name="sukses">Successful</string>
    <string name="suksessimpan">Saved successfully</string>
    <string name="suksesubah">Changed successfully</string>
    <string name="kamera">Camera</string>
    <string name="galeri">Galerry</string>
    <string name="duplikasikode">Duplication id/name</string>
    <string name="duplikasinama">Duplication name</string>
    <string name="carikategori">Find Category</string>
    <string name="carisatuan">Find unit</string>
    <string name="carisupplier">Find Supplier</string>
    <string name="caripelanggan">Find Customer</string>
    <string name="invalidhapus">Cannot be deleted, used in other tables</string>
    <string name="kodeawal">Initial Code</string>
    <string name="stokkurang">Reduction exceeds stock!!!</string>
    <string name="kodepenjualan">Sales id</string>
    <string name="penjualan">Sales</string>
    <string name="harga">Price</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="harga1">Price1\u0009:\u00A0 </string>
    <string name="harga2">Price2\u0009:\u00A0 </string>
    <string name="pajak">Tax</string>
    <string name="diskon">Disc</string>
    <string name="takterdaftar">Product unlist!!!</string>
    <string name="diskonpajak">Tax And Discount</string>
    <string name="persenpajak">% Tax</string>
    <string name="persendiskon">% Discount</string>
    <string name="bantuan">Help</string>
    <string name="tophari">TOP(in day/s)</string>
    <string name="datapelanggan">Customer List</string>
    <string name="datapenjualan">Sales List</string>
    <string name="tanpapelanggan">No Customer</string>
    <string name="detilbarang">Detail Product</string>
    <string name="kembalian">Change</string>
    <string name="proses">Proceed ?</string>
    <string name="piutang">Receivable</string>
    <string name="keuangan">Finance</string>
    <string name="bayarpiutang">Receivables Payment</string>
    <string name="sejarahpembayaran">Payment history</string>
    <string name="pelanggankosong">Empty Customer!!!</string>
    <string name="urlserver">http://undanganfarid.com/android/</string>
</resources>