<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".inputbarang" >
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/toolbar">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="1dp"
            card_view:cardUseCompatPadding="true"
            >
            <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kodebarang" />




        <EditText
            android:id="@+id/txtkode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txt1"
            android:layout_below="@+id/txt1" >


        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtkode"
            android:layout_below="@+id/txtkode"
            android:layout_marginTop="10dp"
            android:text="@string/namabarang" />

        <EditText
            android:id="@+id/txtnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2" >


        </EditText>
        <TextView
            android:id="@+id/t5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txtnama"
            android:text="@string/kategori"
            />
        <TextView
            android:id="@+id/t6"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/t5"
            android:layout_below="@+id/txtnama"

            android:text=":"
            />
        <Button
            android:id="@+id/cmdkat"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/t6"

            android:background="@drawable/cmdcoklat"
            android:layout_below="@+id/txtnama"
            android:text="@string/pilih"
            android:onClick="pilihkategori"
            />
        <TextView
            android:id="@+id/t7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/t5"
            android:text="@string/satuan"
            />
        <TextView
            android:id="@+id/t60"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/t7"
            android:layout_below="@+id/t5"

            android:text=":"
            />

        <Button
            android:id="@+id/cmdsatuan"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/t60"

            android:background="@drawable/cmdcoklat"
            android:layout_below="@+id/t5"
            android:text="@string/pilih"
            android:onClick="pilihsatuan"
            />

            />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/t7"
            android:layout_marginTop="10dp"
            android:text="@string/hargabeli" />

        <EditText
            android:id="@+id/txtmodal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView20" >


        </EditText>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/txtmodal"
            android:layout_marginTop="10dp"
            android:text="@string/hargajual1" />

        <EditText
            android:id="@+id/txtjual1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@+id/textView21" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/txtjual1"
            android:layout_marginTop="10dp"
            android:text="@string/hargajual2" />

        <EditText
            android:id="@+id/txtjual2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@+id/textView22" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/txtjual2"
            android:layout_marginTop="10dp"
            android:text="@string/stokminimal" />

        <EditText
            android:id="@+id/txtstokmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_below="@+id/textView23" >


        </EditText>

        <TextView
            android:id="@+id/t77"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txtstokmin"
            android:text="Supplier"
            />
        <TextView
            android:id="@+id/t30"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/t77"
            android:layout_below="@+id/txtstokmin"

            android:text=":"
            />
        />
        <Button
            android:id="@+id/cmdsup"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/t30"

            android:background="@drawable/cmdcoklat"
            android:layout_below="@+id/txtstokmin"
            android:text="@string/pilih"

            />

                <TextView
                    android:id="@+id/textView200"
                    android:layout_height="wrap_content"
                    android:layout_width="120dp"
                    android:layout_below="@+id/t77"
                    android:layout_marginTop="20dp"
                    android:text="@string/fotobarang" />
                <TextView
                    android:id="@+id/t300"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/textView200"
                    android:layout_below="@+id/t30"

                    android:text=":"
                    />
                />

                <ImageView
                    android:id="@+id/gmbbrg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="10"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_menu"
                    android:layout_below="@+id/textView200"
                    android:contentDescription="@string/app_name" />
        <Button
            android:id="@+id/cmdsimpan"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/simpan"
            android:layout_below="@+id/gmbbrg"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"


            />


        <Button
            android:id="@+id/cmdbatal"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/cmdsimpan"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/gmbbrg"
            android:text="@string/batal"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
        <Button
            android:id="@+id/cmddata"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/cmdbatal"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/gmbbrg"
            android:text="Data"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </FrameLayout>

    </ScrollView>

    </RelativeLayout>

