<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".inputSupplier" >
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kodepelanggan" />

            <EditText
                android:id="@+id/txtkode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txt1"
                android:layout_below="@+id/txt1" >


            </EditText>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtkode"
                android:layout_below="@+id/txtkode"
                android:layout_marginTop="10dp"
                android:text="@string/namapelanggan" />

            <EditText
                android:id="@+id/txtnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2" >


            </EditText>
        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtkode"
            android:layout_below="@+id/txtnama"
            android:layout_marginTop="10dp"
            android:text="@string/alamat" />

        <EditText
            android:id="@+id/txtalamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView21"
            android:layout_below="@+id/textView21" >


        </EditText>
        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtkode"
            android:layout_below="@+id/txtalamat"
            android:layout_marginTop="10dp"
            android:text="@string/telepon" />

        <EditText
            android:id="@+id/txttelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView22"
            android:layout_below="@+id/textView22" >


        </EditText>


            <Button
                android:id="@+id/cmdsimpan"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/simpan"
                android:layout_below="@+id/txttelp"
                android:textColor="#FFFFFF"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"


                />


            <Button
                android:id="@+id/cmdbatal"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/cmdsimpan"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/txttelp"
                android:text="@string/batal"
                android:textColor="#FFFFFF"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"/>
        <Button
            android:id="@+id/cmddata"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/cmdbatal"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/txttelp"
            android:text="Data"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>






    </RelativeLayout>
</RelativeLayout>
